# GiP-Hausaufgaben

./: CMakeLists.txt  HA_ilias_02_1.c  berechnung_pi.c  bool.c  fragebogen.c  froehliche_zahlen.c  primfaktor.c  quader.c  strassenbahn.c  temperatur.c  test.c
10/: 10_1.c  10_2.c
3/: fragebogen.c
4/: bool.c
5/: berechnung_pi.c  froehliche_zahlen.c
6/: flaecheninhalt_dreieck.c  trainingsdaten.c  zinseszinstabelle.c
7/: binary_decimal.c  delta_aristotle.c  quadratic_equation.c
8/: 81_search_algorithms.c  82_magic_square.c
9/: 91.c  91a.c  91b.c  91c.c  92.c
ilias/: HA_ilias_02_1.c  gnuplot_example.c
